Feature:Added new views(admin-transactions) and their controllers