@@ -1,18 +1,23 @@
 package com.company.inventory.simple_inventory.mapper;
 
 import com.company.inventory.simple_inventory.dto.*;
-import com.company.inventory.simple_inventory.model.Inventory;
-import com.company.inventory.simple_inventory.model.Product;
-import com.company.inventory.simple_inventory.model.User;
-import com.company.inventory.simple_inventory.model.Warehouse;
+import com.company.inventory.simple_inventory.model.*;
 
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Mapper {
 
     public Product mapToProductEntity(ProductInsertDTO dto){
-        return new Product(null,null, dto.getName(), dto.getDescription(),dto.getUnit(),null,null);
+
+        return Product.builder()
+                .name(dto.getName())
+                .description(dto.getDescription())
+                .unit(dto.getUnit())
+                .price(dto.getPrice())
+                .build();
+
     }
 
     public Inventory mapToInventoryEntity(InventoryInsertDTO dto, Product product, Warehouse warehouse) {
@@ -23,14 +28,17 @@ public class Mapper {
         return inventory;
     }
 
+
+
     public ProductReadOnlyDTO mapToProductReadOnlyDTO(Product product) {
         List<InventoryReadOnlyDTO> inventoryDTOs = product.getAllProductInventories().stream()
-                .map(inv -> new InventoryReadOnlyDTO(
-                        inv.getWarehouse().getName(),
-                        inv.getQuantity(),
-                        product.getName()
-                ))
-                .toList();
+                .map(inv -> InventoryReadOnlyDTO.builder()
+                        .warehouseName(inv.getWarehouse().getName())
+                        .quantity(inv.getQuantity())
+                        .productName(product.getName())
+                        .build())
+                .collect(Collectors.toList());
+
 
         return new ProductReadOnlyDTO(
                 product.getName(),
@@ -45,10 +53,11 @@ public class Mapper {
 
 
     public InventoryReadOnlyDTO mapToInventoryReadOnlyDTO(Inventory inventory) {
-        return new InventoryReadOnlyDTO
-                        (inventory.getWarehouse().getName(),
-                        inventory.getQuantity(),
-                        inventory.getProduct().getName());
+        return InventoryReadOnlyDTO.builder()
+                .warehouseName(inventory.getWarehouse().getName())
+                .quantity(inventory.getQuantity())
+                .productName(inventory.getProduct().getName())
+                .build();
     }
 
     public UserReadOnlyDTO mapToUserReadOnlyDTO(User user){
@@ -68,6 +77,34 @@ public class Mapper {
         user.setRole(insertDTO.getRole());
 
         return user;
+    }
+
+    public InventoryUpdateDTO mapToUpdateInventoryDTO(Transaction transaction) {
+        InventoryUpdateDTO dto = new InventoryUpdateDTO();
+        dto.setUuid(transaction.getUuid());
+        dto.setProductUuid(transaction.getProduct().getUuid());
+        dto.setWarehouseUuid(transaction.getWarehouseSafe().getUuid());
+        dto.setQuantity(transaction.getQuantity());
+        dto.setTransactionType(transaction.getType());
+        return dto;
+    }
+
+    public ProductUpdateDTO mapToProductUpdateDTO(Product product) {
+        ProductUpdateDTO dto = new ProductUpdateDTO();
+
+        dto.setUuid(product.getUuid());
+        dto.setName(product.getName());
+        dto.setDescription(product.getDescription());
+        dto.setUnit(product.getUnit());
+        dto.setPrice(product.getPrice());
+
+
+        product.getInventoriesSafe().stream()
+                .filter(inv -> !inv.getWarehouse().isDeleted())
+                .findFirst()
+                .ifPresent(inv -> dto.setWarehouseUuid(inv.getWarehouse().getUuid()));
+
+        return dto;
     }
 
 
